JSS analysis.